Format manifest rules

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,13 @@
     "service_worker": "background.js"
   },
   "declarative_net_request": {
-    "rule_resources": [{ "id": "rules", "enabled": true, "path": "rules.json" }]
+    "rule_resources": [
+      {
+        "id": "rules",
+        "enabled": true,
+        "path": "rules.json"
+      }
+    ]
   },
   "action": {
     "default_popup": "popup.html"
